--- a/css/login/register.css
+++ b/css/login/register.css
@@ -1,204 +1,203 @@
-/* 
-   注册样式表
-*/
-body {
-    width: 100%;
-    height: 100vh;
-    font-size: 0.24rem;
-    font-family: "PingFangMedium";
-    background: -moz-linear-gradient(top, #2866a3 0%, #5ebfc8 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #2866a3), color-stop(100%, #5ebfc8));
-    background: -webkit-linear-gradient(top, #2866a3 0%, #5ebfc8 100%);
-    background: -o-linear-gradient(top, #2866a3 0%, #5ebfc8 100%);
-    background: -ms-linear-gradient(top, #2866a3 0%, #5ebfc8 100%);
-}
-.header-zp{
-    background-color: transparent;
-}
-.registerbox{
-	padding-top: .88rem;
-	box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-    width: 100%;
-    position: relative;
-    margin-left:auto;
-    margin-right: auto;
-}
+    /* 
+    注册样式表
+    */
+    body {
+        width: 100%;
+        height: 100vh;
+        font-size: 0.24rem;
+        font-family: "PingFangMedium";
+        background: -moz-linear-gradient(top, #2866a3 0%, #5ebfc8 100%);
+        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #2866a3), color-stop(100%, #5ebfc8));
+        background: -webkit-linear-gradient(top, #2866a3 0%, #5ebfc8 100%);
+        background: -o-linear-gradient(top, #2866a3 0%, #5ebfc8 100%);
+        background: -ms-linear-gradient(top, #2866a3 0%, #5ebfc8 100%);
+    }
+    .header-zp{
+        background-color: transparent;
+    }
+    .registerbox{
+        padding-top: .88rem;
+        box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        width: 100%;
+        position: relative;
+        margin-left:auto;
+        margin-right: auto;
+    }
 
-.reg-new-page{
-    padding:.2rem .3rem .2rem .3rem;
-    box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-}
- .from-group{
-    display: flex;
-    display: -webkit-box; 
-    display: -moz-box; 
-    display: -webkit-flex; 
-    display: -moz-flex; 
-    display: -ms-flexbox; 
-    border-radius: .2rem;
-    height: .8rem;
-    line-height: .8rem;
-    background-color: transparent;
- }
- .from-group .from-cc{
-    font-size: .3rem;
-    color: #1153f3;
-    padding-left: .1rem;
-  
- }
- .from-group .from-tit {
-    display: inline-block;
-    width: 20%;
-    font-size: .3rem;
-    color: #ffffff;
-    padding-left: .1rem;
-}
+    .reg-new-page{
+        padding:.2rem .3rem .2rem .3rem;
+        box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+    }
+    .from-group{
+        display: flex;
+        display: -webkit-box; 
+        display: -moz-box; 
+        display: -webkit-flex; 
+        display: -moz-flex; 
+        display: -ms-flexbox; 
+        border-radius: .2rem;
+        height: .8rem;
+        line-height: .8rem;
+        background-color: transparent;
+    }
+    .from-group .from-cc{
+        font-size: .3rem;
+        color: #1153f3;
+        padding-left: .1rem;
+    
+    }
+    .from-group .from-tit {
+        display: inline-block;
+        width: 20%;
+        font-size: .3rem;
+        color: #ffffff;
+        padding-left: .1rem;
+    }
 
-.from-group .from-icon {
-    display: inline-block;
-    border: .01rem solid #ffffff;
-    width: 80%;
-    border-radius: .1rem;
-    height: .8rem;
-}
-.from-group .from-icon img{
-    padding-left: .3rem;
-    height:.3rem;
-    width: .3rem;
-    vertical-align: middle;
-}
+    .from-group .from-icon {
+        display: inline-block;
+        border: .01rem solid #ffffff;
+        width: 80%;
+        border-radius: .1rem;
+        height: .8rem;
+    }
+    .from-group .from-icon img{
+        padding-left: .3rem;
+        height:.3rem;
+        width: .3rem;
+        vertical-align: middle;
+    }
 
- .from-group .acc{
-    vertical-align: middle;
- }
- 
- .from-group input{
-     padding-left:.1rem;
-     font-size: .2rem;
-     width: 85%; 
-     height:.8rem;
- }
+    .from-group .acc{
+        vertical-align: middle;
+    }
+    
+    .from-group input{
+        padding-left:.1rem;
+        font-size: .2rem;
+        width: 85%; 
+        height:.8rem;
+    }
 
- .from-group .from-verify{
-    width: 60%;    
- }
+    .from-group .from-verify{
+        width: 60%;    
+    }
 
- .from-group .from-icon .verify{
-    width: 1.6rem;    
-}
- 
- .from-group .send-code{
-     border: 0;
-     background: -moz-linear-gradient(top, #d224d5 0%, #d296e2 100%);
-     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #d224d5), color-stop(100%, #d296e2));
-     background: -webkit-linear-gradient(top, #d224d5 0%, #d296e2 100%);
-     background: -o-linear-gradient(top, #d224d5 0%, #d296e2 100%);
-     background: -ms-linear-gradient(top, #d224d5 0%, #d296e2 100%);
-     width: 20%;
-     height: .8rem;
-     border-radius: .2rem;
-     color: #ffffff;
-     font-size: .2rem;
- }
-  .policy{
-      position: relative;
-      display: block;
-  }
-  .policy .icon{
-      background: url("../../image/login/quanquan.png")no-repeat;
-      background-size: 100%;
-      width: .4rem;
-      height: .4rem;
-      display: block;
-      display: inline-block;
-      vertical-align: middle;
-  }
+    .from-group .from-icon .verify{
+        width: 1.6rem;    
+    }
+    
+    .from-group .send-code{
+        border: 0;
+        background: -moz-linear-gradient(top, #d224d5 0%, #d296e2 100%);
+        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #d224d5), color-stop(100%, #d296e2));
+        background: -webkit-linear-gradient(top, #d224d5 0%, #d296e2 100%);
+        background: -o-linear-gradient(top, #d224d5 0%, #d296e2 100%);
+        background: -ms-linear-gradient(top, #d224d5 0%, #d296e2 100%);
+        width: 20%;
+        height: .8rem;
+        border-radius: .2rem;
+        color: #ffffff;
+        font-size: .2rem;
+    }
+    .policy{
+        position: relative;
+        display: block;
+    }
+    .policy .icon{
+        background: url("../../image/login/quanquan.png")no-repeat;
+        background-size: 100%;
+        width: .4rem;
+        height: .4rem;
+        display: block;
+        display: inline-block;
+        vertical-align: middle;
+    }
 
-  .policy .active{
-    background: url("../../image/login/cheack.png")no-repeat;
-    /* background: url("/image/user/gou.png")no-repeat; */
-    background-size: 100%;
-    width: .4rem;
-    height: .4rem;
-    display: block;
-    display: inline-block;
-    vertical-align: middle;
-  }
+    .policy .active{
+        background: url("../../image/login/gou.png")no-repeat;
+        background-size: 100%;
+        width: .4rem;
+        height: .4rem;
+        display: block;
+        display: inline-block;
+        vertical-align: middle;
+    }
 
-  .reg-btn{
-      width: 100%;
-      height: .8rem;
-      margin-top:.5rem;
-  }
-  .reg-btn .btn{
-    width: 100%;
-    height: .8rem;
-    color: #1153f3;
-    border: 0;
-    font-size: .3rem;
-    border-radius: .2rem;
-  }
-  .reg-btn .active{
-      background: -moz-linear-gradient(left, #1de5e2 0%, #1153fc 100%);
-      background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #1de5e2), color-stop(100%, #1153fc));
-      background: -webkit-linear-gradient(left, #1de5e2 0%, #1153fc 100%);
-      background: -o-linear-gradient(left, #1de5e2 0%, #1153fc 100%);
-      background: -ms-linear-gradient(left, #1de5e2 0%, #1153fc 100%);
-  }
-  .reg-btn .dis{
-       background: -moz-linear-gradient(left, #b0b0b0 0%, #95c5d6 100%);
-       background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #b0b0b0), color-stop(100%, #95c5d6));
-       background: -webkit-linear-gradient(left, #b0b0b0 0%, #95c5d6 100%);
-       background: -o-linear-gradient(left, #b0b0b0 0%, #95c5d6 100%);
-       background: -ms-linear-gradient(left, #b0b0b0 0%, #95c5d6 100%);
-   }
-  .info{
-    height: .5rem;
-    text-align: center;
-    width: 80%;  
-    line-height: .5rem;
-  }
+    .reg-btn{
+        width: 100%;
+        height: .8rem;
+        margin-top:.5rem;
+    }
+    .reg-btn .btn{
+        width: 100%;
+        height: .8rem;
+        color: #1153f3;
+        border: 0;
+        font-size: .3rem;
+        border-radius: .2rem;
+    }
+    .reg-btn .active{
+        background: -moz-linear-gradient(left, #1de5e2 0%, #1153fc 100%);
+        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #1de5e2), color-stop(100%, #1153fc));
+        background: -webkit-linear-gradient(left, #1de5e2 0%, #1153fc 100%);
+        background: -o-linear-gradient(left, #1de5e2 0%, #1153fc 100%);
+        background: -ms-linear-gradient(left, #1de5e2 0%, #1153fc 100%);
+    }
+    .reg-btn .dis{
+        background: -moz-linear-gradient(left, #b0b0b0 0%, #95c5d6 100%);
+        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #b0b0b0), color-stop(100%, #95c5d6));
+        background: -webkit-linear-gradient(left, #b0b0b0 0%, #95c5d6 100%);
+        background: -o-linear-gradient(left, #b0b0b0 0%, #95c5d6 100%);
+        background: -ms-linear-gradient(left, #b0b0b0 0%, #95c5d6 100%);
+    }
+    .info{
+        height: .5rem;
+        text-align: center;
+        width: 80%;  
+        line-height: .5rem;
+    }
 
-   .info.mistake{
-    color: red;
-}
+    .info.mistake{
+        color: red;
+    }
 
- .pptt::-webkit-input-placeholder { /* WebKit browsers */
+    .pptt::-webkit-input-placeholder { /* WebKit browsers */
+        color:#b8c9cf
+    }
+
+    .pptt:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+        color:#b8c9cf
+    }
+
+    .pptt::-moz-placeholder { /* Mozilla Firefox 19+ */
     color:#b8c9cf
-}
+    }
 
-.pptt:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
-    color:#b8c9cf
-}
+    .pptt:-ms-input-placeholder { /* Internet Explorer 10+ */
+    color: #b8c9cf
+    }
 
-.pptt::-moz-placeholder { /* Mozilla Firefox 19+ */
-color:#b8c9cf
-}
-
-.pptt:-ms-input-placeholder { /* Internet Explorer 10+ */
-color: #b8c9cf
-}
-
-.login-new{
-    display: -webkit-box;
-	display: -moz-box;
-	display: -ms-flexbox;
-	display: -webkit-flex;
-    display: flex;
-    justify-content: space-between;
-    padding-top:.3rem;
-}
-.login-new a{
-    background-color: transparent;
-    border: 1px solid #fff;
-    border-radius: .625rem;
-    color: #fff;
-    height: .5rem;
-    line-height: .5rem;
-    text-align: center;
-    width: 2rem;
-}
+    .login-new{
+        display: -webkit-box;
+        display: -moz-box;
+        display: -ms-flexbox;
+        display: -webkit-flex;
+        display: flex;
+        justify-content: space-between;
+        padding-top:.3rem;
+    }
+    .login-new a{
+        background-color: transparent;
+        border: 1px solid #fff;
+        border-radius: .625rem;
+        color: #fff;
+        height: .5rem;
+        line-height: .5rem;
+        text-align: center;
+        width: 2rem;
+    }
